fixed keyboard issue where it didnt display correct operator after multiple calculations. fixed issue of results getting too long with keyboard

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 a {
     color: black;
     text-decoration: none; /* no underline */
-    background-color: rgba(255, 255, 255, 0.75)
+    background-color: rgba(100, 255, 255, 0.5)
   }
 
 body {
